# kratos-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  cloud-security-comparison.md  docker-compose.yml  kratos.py  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: scan.yml
agent/: __init__.py  agent.py  notifier.py  watcher.py
agents/: anomaly.py  brain.py  executor.py  notifier.py  scanner.py  state.py  watcher.py
agents/runners/: autonomous.py
anomaly/: __init__.py  baseline.py  cost.py  engine.py  feedback.py  rules.py  scorer.py
docs/: PRD.md  architecture.md  future-anomaly-architecture.md  project_status.md
docs/superpowers/plans/: 2026-04-30-active-monitoring.md
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
ingestion/: __init__.py  collector.py
scripts/: init-anomaly.sql  init-db.sql  seed_anomaly.py
terraform_run/: remediation.tf
tests/: test_scanner.py  test_vault.py
vault/: policy_store.py
